--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon -w src --ext ts --exec ts-node src/index.ts"
+    "dev": "NODE_ENV=development nodemon -w src --ext ts --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "ts-node src/index.ts"
   },
   "author": "Boris Pöhland",
   "license": "MIT",
@@ -16,13 +18,12 @@
     "pg": "^8.4.1",
     "pg-connection-string": "^2.4.0",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
     "type-graphql": "^1.1.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "nodemon": "^2.0.4"
   }
 }
