--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "type-graphql-sample-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon -w src --ext ts --exec ts-node src/index.ts",
     "build": "tsc",
@@ -11,7 +10,6 @@
   "author": "Boris Pöhland",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
@@ -19,9 +17,9 @@
     "pg-connection-string": "^2.4.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
     "type-graphql": "^1.1.0",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
