--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "",
   "scripts": {
     "dev": "NODE_ENV=development nodemon -w src --ext ts --exec ts-node src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "NODE_ENV=production node dist/index.js",
+    "lint": "eslint . --ext .ts --fix",
+    "build": "tsc && tsc ormconfig.ts"
   },
   "author": "Boris Pöhland",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.11.8",
     "apollo-server-express": "^2.18.2",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
     "pg-connection-string": "^2.4.0",
     "reflect-metadata": "^0.1.13",
@@ -21,6 +30,9 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@bpoehland/eslint-config": "^1.0.0",
+    "@bpoehland/prettier-config": "^1.0.0",
+    "jest": "^26.5.3",
     "nodemon": "^2.0.4"
   }
 }
