--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
     "target": "es5",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false
-  }
+    "noImplicitAny": true,
+    "strictPropertyInitialization": false,
+    "typeRoots": ["@types","node_modules/@types"]
+  },
+  "exclude": ["ormconfig.ts"]
 }
