--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build; git add ."
+      "pre-commit": "npm run lint; npm run build; git add ."
     }
   }
 }
