--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
     "pg-connection-string": "^2.4.0",
@@ -36,7 +37,6 @@
     "jest": "^26.5.3",
     "nodemon": "^2.0.4"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint; npm run build; git add ."
