--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   "author": "Boris Pöhland",
   "license": "MIT",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.11.8",
     "apollo-server-express": "^2.18.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
@@ -25,17 +21,26 @@
     "pg": "^8.4.1",
     "pg-connection-string": "^2.4.0",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^9.0.0",
     "type-graphql": "^1.1.0",
-    "typeorm": "^0.2.28",
-    "typescript": "^4.0.3"
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
-    "@bpoehland/eslint-config": "^1.0.0",
+    "@bpoehland/eslint-config-basic": "^1.0.2",
     "@bpoehland/prettier-config": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.11.8",
+    "eslint": "^7.10.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
